--- a/src/scss/partials/components/elements/_button.scss
+++ b/src/scss/partials/components/elements/_button.scss
@@ -3,7 +3,6 @@
   position: relative;
   color: #fff;
   background: $primary-btn-color;
-  box-shadow: inset 0 0 0 $btn-stroke-width $primary-btn-color;
   font-size: 14px;
   line-height: $btn-height;
   font-weight: 700;
@@ -19,10 +18,19 @@
 
   &:hover {
     background: $primary-btn-color-hover;
-    box-shadow: inset 0 0 0 $btn-stroke-width $primary-btn-color-hover;
+  }
+
+  &.white {
+    background: #fff;
+    color: $black;
+
+    &:hover {
+      background: #ffffffd5;
+    }
   }
 
   &.stroke {
+    box-shadow: inset 0 0 0 $btn-stroke-width $primary-btn-color;
     background: transparent;
     color: $primary-btn-color;
 
@@ -54,10 +62,6 @@
         color: #fff;
       }
     }
-  }
-
-  & + .btn {
-    margin-left: 16px;
   }
 
   &.btn-small {
