--- a/src/scss/partials/globals/_typography.scss
+++ b/src/scss/partials/globals/_typography.scss
@@ -10,47 +10,44 @@ h6 {
 }
 
 h1 {
-  font-size: 36px;
-  line-height: 48px;
+  font-size: 28px;
+  line-height: 38px;
 
-  &.large {
-    font-size: 44px;
-    line-height: 54px;
-
-    @media screen and (max-width: $mq-max-md) {
-      font-size: 40px;
-      line-height: 42px;
-    }
-
-    @media screen and (max-width: $mq-max-sm) {
-      font-size: 36px;
-      line-height: 48px;
-    }
-  }
-
-  &.display {
-    font-size: 50px;
-    line-height: 56px;
-
-    @media screen and (max-width: $mq-max-md) {
-      font-size: 44px;
-      line-height: 54px;
-    }
-
-    @media screen and (max-width: $mq-max-sm) {
-      font-size: 40px;
-      line-height: 42px;
-    }
-  }
-
-  @media screen and (max-width: $mq-max-md) {
+  @include breakpoint('sm') {
     font-size: 32px;
     line-height: 46px;
   }
 
-  @media screen and (max-width: $mq-max-sm) {
-    font-size: 28px;
-    line-height: 38px;
+  @include breakpoint('md') {
+    font-size: 36px;
+    line-height: 48px;
+  }
+
+  &.large {
+    @include breakpoint('sm') {
+      font-size: 40px;
+      line-height: 52px;
+    }
+
+    @include breakpoint('md') {
+      font-size: 44px;
+      line-height: 54px;
+    }
+  }
+
+  &.display {
+    font-size: 40px;
+    line-height: 42px;
+
+    @include breakpoint('sm') {
+      font-size: 44px;
+      line-height: 54px;
+    }
+
+    @include breakpoint('md') {
+      font-size: 50px;
+      line-height: 56px;
+    }
   }
 }
 
@@ -100,17 +97,17 @@ li {
   }
 
   &.large {
-    font-size: 24px;
-    line-height: 36px;
+    font-size: 20px;
+    line-height: 28px;
 
-    @media screen and (max-width: $mq-max-md) {
+    @include breakpoint('sm') {
       font-size: 22px;
       line-height: 32px;
     }
 
-    @media screen and (max-width: $mq-max-sm) {
-      font-size: 20px;
-      line-height: 28px;
+    @include breakpoint('md') {
+      font-size: 24px;
+      line-height: 36px;
     }
   }
 }
